--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Fantastic Plant</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
+	<header class="topo">
+		
+		<div>
+		<img src="imagens/logo.png" width="200">
+		</div>
+		
+		<div>
+		<img src="imagens/menu.png"> Home 
+		<img src="imagens/folha.png">Quem Somos 
+		<img src="imagens/arvore.png">Para se conscientizar 
+		<img src="imagens/planta.png">Nossos Produtos
+		</div>
+
+	</header>
+
+
+	<main>
+		
+	</main>
+
+
+	<footer>
+		
+	</footer>
 
 </body>
 </html>
