--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 	<header class="topo">
 		
-		<div>
-		<img src="imagens/logo.png" width="200">
+		<div class="logo">
+			<img src="imagens/logo.png" width="200">
 		</div>
-		
-		<div>
-		<img src="imagens/menu.png"> Home 
-		<img src="imagens/folha.png">Quem Somos 
-		<img src="imagens/arvore.png">Para se conscientizar 
-		<img src="imagens/planta.png">Nossos Produtos
+
+		<div class="menu">
+			<img src="imagens/menu.png"> Home 
+			<img src="imagens/folha.png">Quem Somos 
+			<img src="imagens/arvore.png">Para se conscientizar 
+			<img src="imagens/planta.png">Nossos Produtos
 		</div>
 
 	</header>
