--- a/index.html
+++ b/index.html
@@ -24,11 +24,31 @@
 
 
 	<main>
-		
+
+		<div class="lupa">
+			<i>Busque Aqui</i> <img src="imagens/lupa.png">
+		</div>
+
+		<div class="principal">
+			<img src="imagens/imagem_principal.png">
+		</div>
+
 	</main>
 
 
 	<footer>
+		<div class="contato">
+			Contate-nos:
+			<br>
+			<img src="imagens/whatts.png">(14) 99681-8468
+			<img src="imagens/face.png">FantasticPlant
+			<img src="imagens/insta.png">@fantasticplant
+			<img src="imagens/mail.png">Fantasticplant@gmail.com
+		</div>
+
+		<div class="desenvolvido">
+			Desenvolvido por: Lara e Nayara
+		</div>
 		
 	</footer>
 
