--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="principal">
-			<img src="imagens/imagem_principal.png">
+			<img src="imagens/imagem_principal.png" class="img_principal" >
 		</div>
 
 	</main>
