--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		</div>
 
 		<div class="menu">
-			<img src="imagens/menu.png"> Home 
-			<img src="imagens/folha.png">Quem Somos 
-			<img src="imagens/arvore.png">Para se conscientizar 
-			<img src="imagens/planta.png">Nossos Produtos
+			<img src="imagens/menu.png" class="home"> Home 
+			<img src="imagens/folha.png"class="folha">Quem Somos 
+			<img src="imagens/arvore.png" class="arvore">Para se conscientizar 
+			<img src="imagens/planta.png" class="planta">Nossos Produtos
 		</div>
 
 	</header>
@@ -25,8 +25,8 @@
 
 	<main>
 
-		<div class="lupa">
-			<i>Busque Aqui</i> <img src="imagens/lupa.png">
+		<div class="busque">
+			<i>Busque Aqui</i> <img src="imagens/lupa.png" class="lupa">
 		</div>
 
 		<div class="principal">
