--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Fantastic Plant</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 	<header class="topo">
@@ -30,7 +35,7 @@
 		</div>
 
 		<div class="principal">
-			<img src="imagens/imagem_principal.png" class="img_principal" >
+			<img src="imagens/imagem_principal.png" class="img_principal">
 		</div>
 
 	</main>
