--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 
 		<div class="menu">
-			<img src="imagens/menu.png" class="home"> Home 
+			<img src="imagens/menu.png"class="home"> Home 
 			<img src="imagens/folha.png"class="folha">Quem Somos 
 			<img src="imagens/arvore.png" class="arvore">Para se conscientizar 
 			<img src="imagens/planta.png" class="planta">Nossos Produtos
@@ -45,10 +45,11 @@
 		<div class="contato">
 			Contate-nos:
 			<br>
-			<img src="imagens/whatts.png">(14) 99681-8468
-			<img src="imagens/face.png">FantasticPlant
-			<img src="imagens/insta.png">@fantasticplant
-			<img src="imagens/mail.png">Fantasticplant@gmail.com
+			<img src="imagens/whatts.png" class="whatts">
+			(14) 99681-8468
+			<img src="imagens/face.png" class="face">FantasticPlant
+			<img src="imagens/insta.png" class="insta">@fantasticplant
+			<img src="imagens/mail.png" class="mail">Fantasticplant@gmail.com
 		</div>
 
 		<div class="desenvolvido">
