modificacao denovo novamente
AWWWWWNNN MIRA ESFREGA MAIS ESSA CARECA VAI

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 		</div>
 
 		<div class="menu">
-			<img src="imagens/menu.png"class="home"> Home 
-			<img src="imagens/folha.png"class="folha">Quem Somos 
+			<img src="imagens/menu.png"class="home"> 
+			<p>Home</p> 
+			<img src="imagens/folha.png"class="folha">
+			Quem Somos 
 			<img src="imagens/arvore.png" class="arvore">Para se conscientizar 
 			<img src="imagens/planta.png" class="planta">Nossos Produtos
 		</div>
@@ -31,7 +33,8 @@
 	<main>
 
 		<div class="busque">
-			<i>Busque Aqui</i> <img src="imagens/lupa.png" class="lupa">
+			<input type="text" name="" placeholder="Busque Aqui" class="txtbusque">
+			<img src="imagens/lupa.png" class="lupa">
 		</div>
 
 		<div class="principal">
