--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 		<div class="menu">
 			<img src="imagens/menu.png"class="home"> 
-			<p>Home</p> 
+			<a class="menu_txt" href="#">Home</a> 
 			<img src="imagens/folha.png"class="folha">
-			Quem Somos 
-			<img src="imagens/arvore.png" class="arvore">Para se conscientizar 
-			<img src="imagens/planta.png" class="planta">Nossos Produtos
+			<a class="menu_txt" href="#">Quem Somos</a>
+			<img src="imagens/arvore.png" class="arvore"><a class="menu_txt" href="#">Para se conscientizar</a>
+			<img src="imagens/planta.png" class="planta"><a class="menu_txt" href="#">Nossos Produtos</a>
 		</div>
 
 	</header>
@@ -46,8 +46,7 @@
 
 	<footer>
 		<div class="contato">
-			Contate-nos:
-			<br>
+			<p class="cont">Contate-nos:</p>
 			<img src="imagens/whatts.png" class="whatts">
 			(14) 99681-8468
 			<img src="imagens/face.png" class="face">FantasticPlant
@@ -60,6 +59,7 @@
 		</div>
 		
 	</footer>
+
 
 </body>
 </html>
